--- a/styles/categories-styles.css
+++ b/styles/categories-styles.css
@@ -6,8 +6,8 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 30px;
+  flex-wrap: wrap;
 }
-
 
 .header-categories {
   width: 100%;
@@ -16,24 +16,30 @@
   justify-content: space-between;
 
   span {
-      color: #ff4156;
-      font-weight: bold;
-      cursor: pointer;
+    color: #ff4156;
+    font-weight: bold;
+    cursor: pointer;
   }
 }
 
 .categories-items {
-
   span {
     padding: 10px 20px;
-    background: #FFF;
+    background: #fff;
     border-radius: 40px;
-    cursor: pointer
+    cursor: pointer;
   }
 
   .category-active {
     background: #ff4156;
     color: #fff;
   }
-}
 
+  @media screen and (max-width: 700px) {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+}
