--- a/styles/checkout-styles.css
+++ b/styles/checkout-styles.css
@@ -17,14 +17,19 @@
 
 .modal-content {
   background: white;
-  padding: 30px;
+  padding: 20px 10px;
   border-radius: 12px;
-  max-width: 400px;
+  max-width: 500px;
   width: 90%;
   position: relative;
   display: flex;
+  align-items: center;
   flex-direction: column;
   gap: 15px;
+}
+
+#checkout-form {
+  width: 100%;
 }
 
 #modal-checkout h2 {
@@ -71,4 +76,20 @@
 
 #checkout-form label {
     margin-top: 20px;
+}
+
+#checkout-form p {
+  font-size: 12px;
+}
+
+#confirmar-checkout {
+  border: none;
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  margin-top: 20px;
+  background: #ff4156;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
 }
